[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://src/Player.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 28 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 487, 292 )
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, -4 )
frames = SubResource( 1 )

[node name="AmmoTimer" type="Timer" parent="."]

[node name="Physics" type="CollisionShape2D" parent="."]
position = Vector2( 1, -4 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.8, 0.8 )
smoothing_enabled = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 6

[node name="HurtBox" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, -4 )
shape = SubResource( 3 )

[connection signal="timeout" from="AmmoTimer" to="." method="_on_AmmoTimer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
